# cppsdlc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-cd.yml  coverage.yml
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
docs/: API.md  ARCHITECTURE.md  BUILD.md  VCPKG_PRIVATE_REGISTRY.md
include/myapp/: calculator.h
src/: calculator.cpp  json_example.cpp  main.cpp  version.rc.in
tests/: CMakeLists.txt  calculator_test.cpp
